# pompeiu_hausdorff

./: CMakeLists.txt  README.md  main.cpp  pyproject.toml
.github/workflows/: wheels.yml
meshes/: readme.txt
src/: PompeiuHausdorff.cpp  PompeiuHausdorff.h  bindings.cpp  bisector_of_two_points.cpp  bisector_of_two_points.h  gettimeofday.cpp  gettimeofday.h  kang_intersect_edge_and_bisector.cpp  kang_intersect_edge_and_bisector.h  kang_upper_bound.cpp  kang_upper_bound.h  pompeiu_hausdorff.cpp  pompeiu_hausdorff.h  upper_bounds.cpp  upper_bounds.h
src/cascading_upper_bounds/: __init__.py
tests/: test.py
