[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2","typing_extensions"]
build-backend = "scikit_build_core.build"

[project]
name = "cascading_upper_bounds"
version = "1.0.0"
description = "Implementation of Cascading upper bounds for triangle soup Pompeiu-Hausdorff distance"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Leonardo Sacht", email = "leonardo.sacht@ufsc.br" },
    { name = "Alec Jacobson", email = "alecjacobson@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)"
]

[project.urls]
Homepage = "https://github.com/leokollersacht/pompeiu_hausdorff"

[tool.scikit-build.cmake.define]
BUILD_EXECUTABLE = false
BUILD_PYTHON_BINDINGS = true

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"


# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 3

# Run pytest to ensure that the package was correctly built
test-requires = ["pytest","libigl","numpy"]
test-command = "pytest --tb=long --capture=no -s {project}/tests/test.py"

# Don't test Python 3.8 wheels on macOS/arm64
test-skip="cp38-macosx_*:arm64 cp313-*"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
